Updates simulation to use tri-state data bus
Modifies the simulation environment to accurately model the tri-state behavior of the 8008 data bus.

This change involves separating the data bus into input, output, and enable signals within the VHDL testbenches and the core s8008 component. A tri-state reconstruction logic is implemented in the testbenches to resolve contention and correctly model the bus behavior during read and write cycles.

This improves simulation accuracy and brings it closer to the real hardware behavior.

Also updates Makefiles to use USERNAME environment variable instead of hardcoded path. Increases simulation stop time for hello_io project.

--- a/projects/hello_io/Makefile
+++ b/projects/hello_io/Makefile
@@ -15,7 +15,7 @@ WORK_DIR = work
 #==========================================
 # Simulation Configuration
 #==========================================
-STOP_TIME_s8008_hello_io_tb = 3050us
+STOP_TIME_s8008_hello_io_tb = 5000us
 SIM_STOP_TIME ?= $(or $(STOP_TIME_$(TB_ENTITY)),1ms)
 
 #==========================================
@@ -38,7 +38,7 @@ TB_SOURCES = s8008_hello_io_tb.vhdl
 #==========================================
 # Program Assembly Configuration
 #==========================================
-NAKEN_ASM ?= /Users/hackbook/Development/naken_asm/naken_asm
+NAKEN_ASM ?= /Users/${USERNAME}/Development/naken_asm/naken_asm
 PYTHON = python3
 
 #==========================================
