Improves I/O and interrupt handling
Enhances I/O console to correctly identify I/O cycles based on the port address.

Adds interrupt acknowledge cycle detection and handling. The CPU initialization procedure is corrected.

The testbench now pulses the interrupt line longer to ensure it's sampled correctly.

--- a/projects/hello_io/Makefile
+++ b/projects/hello_io/Makefile
@@ -47,7 +47,7 @@ PYTHON = python3
 
 # Default target: assemble and run simulation
 .PHONY: all
-all: asm sim view-output
+all: asm hex2mem sim view-output
 
 # Assemble the hello_io program
 .PHONY: asm
