Implements UART RX with Intel 8008 CPU
Implements a generic UART receiver and bidirectional communication using the Intel 8008 CPU.

This includes adding the UART RX component, extending s8008_uart for bidirectional operation, a top-level design, constraint file, and test program to demonstrate interactive serial communication with echo and line editing.

The project demonstrates I/O ports for both transmission and reception, read-clear mechanism for received data, and memory-mapped buffering for user input.

--- a/projects/uart_rx/Makefile
+++ b/projects/uart_rx/Makefile
@@ -1,12 +1,12 @@
-# Makefile for UART TX Project
-# Demonstrates generic UART transmitter with Intel 8008
+# Makefile for UART RX Project
+# Demonstrates bidirectional UART (TX + RX) with Intel 8008
 
 #==========================================
 # Project Configuration
 #==========================================
-PROJECT_NAME = uart_tx
-TOP_ENTITY = uart_tx_top
-TB_ENTITY = uart_tx_tb
+PROJECT_NAME = uart_rx
+TOP_ENTITY = uart_rx_top
+TB_ENTITY = uart_rx_tb
 
 # Project root directory
 PROJECT_ROOT = ../..
@@ -15,8 +15,8 @@ WORK_DIR = work
 #==========================================
 # Simulation Configuration
 #==========================================
-# Run simulation for 100ms (interrupt-driven, longer observation time)
-SIM_STOP_TIME = 100ms
+# Run simulation for 500ms (longer to observe interactive echo with CPU polling)
+SIM_STOP_TIME = 500ms
 
 #==========================================
 # Source Files
@@ -32,15 +32,15 @@ RTL_SOURCES = $(PROJECT_ROOT)/src/components/uart_tx.vhdl \
               $(PROJECT_ROOT)/src/components/phase_clocks.vhdl \
               $(PROJECT_ROOT)/src/components/rom_2kx8.vhdl \
               $(PROJECT_ROOT)/src/components/ram_1kx8.vhdl \
-              src/uart_tx_top.vhdl
+              src/uart_rx_top.vhdl
 
-TB_SOURCES = uart_tx_tb.vhdl
+TB_SOURCES = uart_rx_tb.vhdl
 
 #==========================================
 # Constraint File Override
 #==========================================
 # Use project-specific constraint file instead of default
-LPF_FILE = $(PROJECT_ROOT)/projects/uart_tx/constraints/uart_tx.lpf
+LPF_FILE = $(PROJECT_ROOT)/projects/uart_rx/constraints/uart_rx.lpf
 
 #==========================================
 # Program Assembly Configuration
@@ -57,23 +57,23 @@ include $(PROJECT_ROOT)/common.mk
 # Project-Specific Targets
 #==========================================
 
-# Assemble the uart_tx program
+# Assemble the uart_rx program
 .PHONY: asm
 asm:
-	@echo "=== Assembling uart_tx.asm ==="
-	$(NAKEN_ASM) -I . -l -type hex -o test_programs/uart_tx.hex test_programs/uart_tx.asm
+	@echo "=== Assembling uart_rx.asm ==="
+	$(NAKEN_ASM) -I . -l -type hex -o test_programs/uart_rx.hex test_programs/uart_rx.asm
 	@echo "✓ Assembly complete"
 
 # Convert to MEM format
 .PHONY: hex2mem
 hex2mem: asm
 	@echo "=== Converting to MEM format ==="
-	$(PYTHON) $(PROJECT_ROOT)/hex_to_mem.py test_programs/uart_tx.hex test_programs/uart_tx.mem
-	@echo "✓ Generated uart_tx.mem"
+	$(PYTHON) $(PROJECT_ROOT)/hex_to_mem.py test_programs/uart_rx.hex test_programs/uart_rx.mem
+	@echo "✓ Generated uart_rx.mem"
 
 # Build everything (assemble program + synthesize FPGA)
-.PHONY: all
-all: asm hex2mem bitstream
+.PHONY: project
+project: asm hex2mem bitstream
 
 # Full build and program workflow - does everything you need!
 .PHONY: deploy
@@ -81,9 +81,9 @@ deploy: clean-proj hex2mem bitstream program
 	@echo ""
 	@echo "========================================="
 	@echo "✓ FPGA programmed and ready!"
-	@echo "✓ UART TX transmitter loaded"
-	@echo "✓ Connect FTDI to UART_TX pin"
-	@echo "✓ Use minicom to receive data"
+	@echo "✓ UART transceiver (TX + RX) loaded"
+	@echo "✓ Connect FTDI to UART_TX and UART_RX pins"
+	@echo "✓ Use minicom for bidirectional communication"
 	@echo "========================================="
 	@echo ""
 	@echo "UART Configuration:"
@@ -92,20 +92,26 @@ deploy: clean-proj hex2mem bitstream program
 	@echo "  Parity: None"
 	@echo "  Stop bits: 1"
 	@echo ""
+	@echo "Expected Behavior:"
+	@echo "  1. Transmits 'Hello, Terminal!'"
+	@echo "  2. Waits for user input"
+	@echo "  3. Echoes characters as typed"
+	@echo "  4. When Enter pressed, responds with 'You said \"[input]\"'"
+	@echo ""
 
 # Clean project files
 .PHONY: clean-proj
 clean-proj: clean
-	rm -f test_programs/uart_tx.hex test_programs/uart_tx.lst test_programs/uart_tx.mem
+	rm -f test_programs/uart_rx.hex test_programs/uart_rx.lst test_programs/uart_rx.mem
 	rm -f build/*
 
 .PHONY: help-proj
 help-proj:
-	@echo "UART TX Project - Makefile"
+	@echo "UART RX Project - Makefile"
 	@echo "============================================="
 	@echo ""
 	@echo "Build Flow:"
-	@echo "  1. make asm         - Assemble uart_tx.asm"
+	@echo "  1. make asm         - Assemble uart_rx.asm"
 	@echo "  2. make hex2mem     - Convert to mem format"
 	@echo "  3. make bitstream   - Synthesize for FPGA"
 	@echo "  4. make program     - Program FPGA SRAM"
@@ -114,6 +120,7 @@ help-proj:
 	@echo "Quick Commands:"
 	@echo "  make deploy         - Complete workflow: clean, build, and program FPGA"
 	@echo "  make all            - Build everything (asm + synthesis)"
+	@echo "  make sim            - Run testbench simulation"
 	@echo "  make reports        - View timing/utilization"
 	@echo "  make clean-proj     - Clean generated files"
 	@echo ""
@@ -122,18 +129,23 @@ help-proj:
 	@echo "  make flash          - Persistent (survives power cycle)"
 	@echo ""
 	@echo "Expected Behavior:"
-	@echo "  - System transmits 'Hello, Terminal!' via UART"
-	@echo "  - UART configuration: 9600 baud, 8N1"
-	@echo "  - Connect FTDI 3.3V adapter to UART_TX pin"
-	@echo "  - Use minicom or similar terminal program"
+	@echo "  - System transmits 'Hello, Terminal!\\r\\n'"
+	@echo "  - Enters interactive mode with prompt '>'"
+	@echo "  - Echoes characters as typed"
+	@echo "  - When Enter pressed, responds: 'You said \"[input]\"'"
+	@echo "  - Repeats with new prompt"
 	@echo ""
 	@echo "Reusable Components Used:"
-	@echo "  - uart_tx.vhdl                    (NEW! Generic UART transmitter)"
+	@echo "  - uart_tx.vhdl                    (Generic UART transmitter)"
+	@echo "  - uart_rx.vhdl                    (NEW! Generic UART receiver)"
+	@echo "  - s8008_uart.vhdl                 (8008-specific UART wrapper with TX+RX)"
 	@echo "  - io_controller.vhdl              (Generic I/O)"
 	@echo "  - memory_controller.vhdl          (ROM/RAM management)"
 	@echo ""
 	@echo "I/O Ports:"
 	@echo "  IN 0:   UART TX status (bit 0 = tx_busy)"
+	@echo "  IN 1:   UART RX data (read clears rx_ready)"
+	@echo "  IN 2:   UART RX status (bit 0 = rx_ready)"
 	@echo "  OUT 10: UART TX data register"
 	@echo ""
 	@echo "Minicom Setup:"
@@ -144,10 +156,11 @@ help-proj:
 .PHONY: check-constraints
 check-constraints:
 	@if [ ! -f "$(LPF_FILE)" ]; then \
-		echo "Error: Constraint file not found: $(LPF_FILE)"; \
-		exit 1; \
+		echo "Warning: Constraint file not found: $(LPF_FILE)"; \
+		echo "You may need to create it for hardware synthesis"; \
+	else \
+		echo "✓ Constraint file found: $(LPF_FILE)"; \
 	fi
-	@echo "✓ Constraint file found: $(LPF_FILE)"
 
 # Override bitstream target to check constraints and ensure clean GHDL cache
 bitstream: check-constraints
