Add Intel 8008 ISA documentation and update .gitignore
Include PDF and JSON documentation for Intel 8008 instruction
set architecture. Update .gitignore to ignore all JSON files
except the ISA documentation to streamline commits and prevent
unintended upload of synthesis-related files.

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,12 @@ sim/output.txt
 
 # Bitstream and synthesis files
 *.bit
-*.json
 *.config
 *.v
+
+# JSON synthesis files (but keep isa.json)
+*.json
+!isa.json
 
 # Editor and OS files
 .DS_Store
